# open-webui_retriva-adapter

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.agent/rules/: retriva-constitution.md
.agent/workflows/: architect.md  define.md  execute.md  verify.md
adapter/: Dockerfile  README.md  pyproject.toml
adapter/scripts/: check_db.py  cleanup_tests.py  repro_kb_issue.py  retriva_push_based_synchronization.py
adapter/src/adapter/: __init__.py  __main__.py  artifact_classifier.py  chat_observer.py  config.py  directive_parser.py  fetcher.py  ingestion_context.py  logging_config.py  main.py  mapping_store.py  metrics.py  models.py  observer.py  orchestrator.py  pdf_extractor.py  retriva_client.py  synthetic_response.py  turn_classifier.py
adapter/src/adapter/logger/: __init__.py  logger.py
adapter/tests/: conftest.py  final_verification.py  standalone_regression_tests.py  standalone_test_classifier.py  test_api.py  test_artifact_classifier.py  test_artifact_regressions.py  test_chat_completions_proxy.py  test_chat_observer.py  test_chat_poll_integration.py  test_config.py  test_debug_endpoints.py  test_directive_parser.py  test_fetcher.py  test_ingestion_context.py  test_integration.py  test_mapping_store.py  test_observer.py  test_orchestrator.py  test_owui_synthetic_prompts.py  test_retrieval_parameters.py  test_retriva_client.py  test_synthetic_response.py  test_system_events.py  test_turn_classifier.py  test_verify_metadata_propagation.py  test_webhook.py
data/: adapter.db
docs/: roadmap.md  ux-routing-guidelines.md
(+32 files in other folders)
